# discordbattlebot

./: main.py  pyproject.toml
data/: responses.py  toon_classes.py  toon_types.py
subroutines/: commands.py  fight.py  functions.py  interactions.py  mysql_connector.py  t_modal.py  ui.py
